layout spacing issues fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -558,3 +558,7 @@ border: 0.5px solid #fff;
 .copy-footer{
     padding-top: 150px;
 }
+.gallery-bottom-space{
+    margin-bottom: 0 !important;
+    padding-bottom: 150px;
+}
